--- a/meta.tex
+++ b/meta.tex
@@ -19,8 +19,8 @@
 
 \firstAuthorEmail{wru@dsv.su.se}              % First author's e-mail address
 
-\thesisTitle{A Novel, multitask method for computerized testing of Emotional Intelligence}                   % The title of the thesis
-\thesisSubtitle{Subtitle of the thesis, if any} % The subtitle of the thesis
+\thesisTitle{A Multitask, Software-based Emotional Intelligence Test}                   % The title of the thesis
+\thesisSubtitle{} % The subtitle of the thesis
 
 \thesisSubject{Human-Computer Interaction}   % May be changed
                                                 % to e.g. Human-Computer
@@ -35,24 +35,14 @@
 \thesisExternalAdvisor{}                        % Name of External Advisor,
                                                 % if you have one
 
-\thesisReviewer{Name of Reviewer}
-\semester{Spring/Autumn}
-\swedishTitle{Uppsatstitel}
+\thesisReviewer{Panagiotis Papatreou}
+\semester{Spring}
+\swedishTitle{Ett emotionellt intelligens test med flera uppgifter}
 
                                                % The abstract text comes
                                                % here. Not more than 300
                                                % words. No empty lines.
-\abstracttext{ Qui terempri isuam liam incum aris forteat
-  strudentre quid inculoc iviliaet; nihilius. Catimor demquam tam,
-  senterf rmactum ompec orum, ne culvitimis se constusquam
-  pratastiam porum rem, que poptert batia vidiem, sendum patus?
-  Paturo vis esum inessus, furnimi iliciem ent vidit rebaturei
-  potiu quam ductame teris, conductam me consum retis consuniu ma,
-  speriam rem firisum publi, quam factod norehem et grat. Maesse,
-  se orteliciemus cem.  Fuidena ilicien ervid C. M. C. me quid rem
-  moente, conimus nit practanti, tabena, Ti. Habunterfer que
-  avoltum quam hinaterniam abem nonside labistiae, intelic vidi
-  ium erce enatici ecturox nulviribem hostio nesimoeritia rei
-  inatis.}
 
-\keywords{Keywords for the thesis, common in the domain.}
+\abstracttext{Emotional intelligence, the ability to socially adapt to the affects of oneself and others is a fundamental social skill. Researchers have defined the term in different ways and it is at present somewhat controversial. Likewise, researchers have created many emotional intelligence tests, all tightly coupled to their respective definitions. In this thesis, I create a new software-based test, combining two earlier approaches, SPEC and METT. I evaluated the software using an experiment where 81 university students took the test once and 31 took it twice. Analyzing the results, I found, a high degree of reliability for SPEC, low correlations between SPEC and METT, and a low test-retest reliability for SPEC. Based on this, I conclude that: METT is highly reliable; SPEC measures a different quality than does METT, but is an unreliable instrument. A possible aim for future research is finding a more reliable alternative to SPEC.}
+
+\keywords{emotional intelligence, emotion, psychometrics, software}
