--- a/meta.tex
+++ b/meta.tex
@@ -43,6 +43,6 @@
                                                % here. Not more than 300
                                                % words. No empty lines.
 
-\abstracttext{Emotional intelligence, the ability to socially adapt to the affects of oneself and others is a fundamental social skill. Researchers have defined the term in different ways and it is at present somewhat controversial. Likewise, researchers have created many emotional intelligence tests, all tightly coupled to their respective definitions. In this thesis, I create a new software-based test, combining two earlier approaches, SPEC and METT. I evaluated the software using an experiment where 81 university students took the test once and 31 took it twice. Analyzing the results, I found, a high degree of reliability for SPEC, low correlations between SPEC and METT, and a low test-retest reliability for SPEC. Based on this, I conclude that: METT is highly reliable; SPEC measures a different quality than does METT, but is an unreliable instrument. A possible aim for future research is finding a more reliable alternative to SPEC.}
+\abstracttext{Emotional intelligence, the ability to socially adapt to the affects of oneself and others is a fundamental social skill. Researchers have defined the term in different ways and it is at present somewhat controversial. Likewise, researchers have created many emotional intelligence tests, all tightly coupled to their respective definitions. In this thesis, I create a new software-based test, combining two earlier approaches, SPEC and METT. I evaluated the software using an experiment where 81 university students took the test once and 31 took it twice. Analyzing the results, I found, a high degree of reliability for SPEC, low correlations between SPEC and METT, and a low test-retest reliability for SPEC. Based on this, I conclude that: METT is highly reliable; SPEC measures a different quality than does METT, but is an unreliable instrument. Combining tests proved successful, however performance of SPEC was poor. A possible aim for future research is finding a more reliable alternative to SPEC.}
 
 \keywords{emotional intelligence, emotion, psychometrics, software}
