--- a/outline.org
+++ b/outline.org
@@ -1300,7 +1300,7 @@
   related to emotional intelligence as well as the actual ability to
   read emotional cues in the facial expressions of others.
 
-  Answering the primary research question, it seems that combining
+  Answering the research question, it seems that combining
   instruments is worthwhile in increasing qualitative coverage. The
   SPEC, however, performed poorly, and should to be replaced with
   another test.
