--- a/paradigms.tex
+++ b/paradigms.tex
@@ -1,4 +1,4 @@
-\begin {table}[H]
+\begin {table}[!htbp]
   \caption{Earlier methods of measuring emotional intelligence}
   \label{table:paradigms}
   \begin{tabularx}{\textwidth}{llll}
