--- a/meta.tex
+++ b/meta.tex
@@ -36,7 +36,7 @@
                                                 % if you have one
 
 \thesisReviewer{Panagiotis Papatreou}
-\semester{Spring}
+\semester{Fall}
 \swedishTitle{Ett emotionellt intelligenstest med flera uppgifter}
 
                                                % The abstract text comes
